Added some reminders for compiling and running the program